--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Marvel Verse</string>
+    <string name="attribution">Data provided by &lt;a href="https://marvel.com"&gt;Marvel&lt;/a&gt;. © %d MARVEL</string>
 
     <string name="label_characters">Characters</string>
     <string name="label_comics">Comics</string>
